--- a/Test_caas_2.html
+++ b/Test_caas_2.html
@@ -12,26 +12,23 @@
       padding: 0;
       background-color: #f4f4f4;
       color: #333;
-      max-width: 600px;
-      font-size: 15px;
+      max-width: 900px;
+      text-align: center;
     "
   >
     <table
       border="0"
+      align="center"
       cellpadding="0"
       cellspacing="0"
       width="100%"
+      background="https://cxbmbtbxhpvtfngkmigp.supabase.co/storage/v1/object/public/edm/bg.png"
       style="
-        max-width: 450px;
+        max-width: 800px;
         margin: 20px auto;
         background-color: #fff;
-        background: linear-gradient(
-          180deg,
-          #18283a 0%,
-          #304962 52.17%,
-          #18283a 100%
-        );
         text-align: center;
+        background: url('https://cxbmbtbxhpvtfngkmigp.supabase.co/storage/v1/object/public/edm/bg.png');
       "
     >
       <tr>
@@ -40,28 +37,41 @@
           style="padding: 0; text-align: center; background-color: transparent"
         >
           <img
-            src="./assets/hero.png"
+            src="https://cxbmbtbxhpvtfngkmigp.supabase.co/storage/v1/object/public/edm/hero-new.png?t=2024-07-22T16%3A05%3A54.020Z"
             alt="CAAS 40th Anniversary"
-            style="width: 100%; max-width: 450px"
+            style="width: 100%; max-width: 800px"
           />
         </td>
       </tr>
       <tr>
         <td style="padding: 20px; color: #fff">
-          <p style="text-align: center">
-            Dear
-            <span style="font-family: Lucida Handwriting"
-              >*|FNAME|* *|LNAME|*</span
-            >,
-          </p>
-          <p style="text-align: center; line-height: 21px">
-            We look forward to welcoming you soon at the Civil Aviation
-            Authority of Singapore (CAAS) 40th Anniversary Dinner. This event
-            marks a significant milestone and will be an occasion for the
-            Singapore aviation sector and our partners to come together to
-            commemorate four decades of aviation excellence and celebrate our
-            shared aspiration to take Singapore aviation to greater heights.
-          </p>
+          <table
+            border="0"
+            cellpadding="0"
+            cellspacing="0"
+            width="100%"
+            style="margin: 20px 0; text-align: center"
+          >
+            <tr>
+              <td>
+                <p style="text-align: center">
+                  Dear
+                  <span style="font-family: Lucida Handwriting"
+                    >*|FNAME|* *|LNAME|*</span
+                  >,
+                </p>
+                <p style="text-align: center; line-height: 21px">
+                  We look forward to welcoming you soon at the Civil Aviation
+                  Authority of Singapore (CAAS) 40th Anniversary Dinner. This
+                  event marks a significant milestone and will be an occasion
+                  for the Singapore aviation sector and our partners to come
+                  together to commemorate four decades of aviation excellence
+                  and celebrate our shared aspiration to take Singapore aviation
+                  to greater heights.
+                </p>
+              </td>
+            </tr>
+          </table>
           <br />
           <hr style="width: 80%" />
           <table
@@ -71,29 +81,54 @@
             width="100%"
             style="margin: 20px 0; text-align: center"
           >
-            <!-- <tr>
+            <tr>
               <td style="width: 33%">
                 <img
-                  src="https://mcusercontent.com/0bfce30f7d6dbd7ea484a062d/images/c7e5cd6e-b0ee-46d1-d3c8-b0e02c72dae1.png"
+                  src="https://cxbmbtbxhpvtfngkmigp.supabase.co/storage/v1/object/public/edm/1.png"
                   alt="Calendar Icon"
                   style="width: 50px; height: 50px"
                 />
               </td>
               <td style="width: 33%">
                 <img
-                  src="https://mcusercontent.com/0bfce30f7d6dbd7ea484a062d/images/d1042ddc-d31f-b14c-e66f-11f7f1c90d55.png"
+                  src="https://cxbmbtbxhpvtfngkmigp.supabase.co/storage/v1/object/public/edm/2.png"
                   alt="Location Icon"
                   style="width: 50px; height: 50px"
                 />
               </td>
               <td style="width: 33%">
                 <img
-                  src="https://mcusercontent.com/0bfce30f7d6dbd7ea484a062d/images/c57f2d9b-6136-ec2b-e4d9-8ca19254f7ae.png"
+                  src="https://cxbmbtbxhpvtfngkmigp.supabase.co/storage/v1/object/public/edm/3.png"
                   alt="Dress Code Icon"
                   style="width: 50px; height: 50px"
                 />
               </td>
-            </tr> -->
+            </tr>
+            <tr>
+              <td style="width: 33%; font-size: 14px; vertical-align: text-top">
+                <p>
+                  Friday,<br />
+                  6th September 2024
+                </p>
+              </td>
+              <td style="width: 33%; font-size: 14px; vertical-align: text-top">
+                <p>
+                  Shangri-La Hotel, <br />
+                  Island Ballroom (Level 1)
+                </p>
+              </td>
+              <td style="width: 33%; font-size: 14px; vertical-align: text-top">
+                <p>Jacket without <br />Tie/Evening Wear</p>
+              </td>
+            </tr>
+          </table>
+          <!-- <table
+            border="0"
+            cellpadding="0"
+            cellspacing="0"
+            width="100%"
+            style="margin: 20px 0; text-align: center"
+          >
             <tr>
               <td>
                 <p>You may view the key event details below:</p>
@@ -104,12 +139,12 @@
               <td>
                 <img
                   width="400"
-                  src="./assets/date.png"
+                  src="https://cxbmbtbxhpvtfngkmigp.supabase.co/storage/v1/object/public/edm/date_dark.png"
                   alt="Dress Code Icon"
                 />
               </td>
             </tr>
-          </table>
+          </table> -->
           <hr style="width: 80%; margin: 40px auto" />
           <table
             border="0"
@@ -381,30 +416,44 @@
             text-align: center;
           "
         >
-          <p>
-            Upon submission, a confirmation email with a QR code will be sent to
-            your registered email. Please bring and present this QR code during
-            registration on the event day.
-          </p>
-          <p>
-            If you have any queries concerning the event, you may reach us at<br />
-            <a
-              href="mailto:caas_40_anniversary@caas.gov.sg"
-              style="color: #fff; text-decoration: none"
-              >caas_40_anniversary@caas.gov.sg</a
-            >.
-          </p>
-          <p>
-            Warm regards,<br /><br />
-            <b style="font-size: larger">Han Kok Juan</b
-            ><br />Director-General<br />Civil Aviation Authority of Singapore
-          </p>
+          <table
+            border="0"
+            cellpadding="0"
+            cellspacing="0"
+            width="100%"
+            style="margin: 20px 0; text-align: center"
+          >
+            <tr>
+              <td>
+                <p>
+                  Upon submission, a confirmation email with a QR code will be
+                  sent to your registered email. Please bring and present this
+                  QR code during registration on the event day.
+                </p>
+                <p>
+                  If you have any queries concerning the event, you may reach us
+                  at<br />
+                  <a
+                    href="mailto:caas_40_anniversary@caas.gov.sg"
+                    style="color: #fff; text-decoration: none"
+                    >caas_40_anniversary@caas.gov.sg</a
+                  >.
+                </p>
+                <p>
+                  Warm regards,<br /><br />
+                  <b style="font-size: larger">Han Kok Juan</b
+                  ><br />Director-General<br />Civil Aviation Authority of
+                  Singapore
+                </p>
+              </td>
+            </tr>
+          </table>
         </td>
       </tr>
       <tr>
         <td style="background-color: #fff; color: #333; text-align: center">
           <img
-            src="https://mcusercontent.com/0bfce30f7d6dbd7ea484a062d/images/b77f99fa-1e4c-67bc-f98d-ab37e4c2c1b7.png"
+            src="https://cxbmbtbxhpvtfngkmigp.supabase.co/storage/v1/object/public/edm/footer-new.png?t=2024-07-22T16%3A06%3A13.471Z"
             alt="CAAS 40th Anniversary"
             style="width: 100%; max-width: 800px"
           />
